[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/GFX/Friends/beach_buddy1/beach_buddy_1.png" type="Texture" id=1]
[ext_resource path="res://Assets/GFX/Friends/beach_buddy1/beach_buddy_throwing_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scenes/Friends/BeachBuddy.gd" type="Script" id=3]
[ext_resource path="res://Assets/GFX/Friends/beach_buddy1/beach_buddy_2.png" type="Texture" id=4]
[ext_resource path="res://Assets/GFX/Friends/beach_buddy1/beach_buddy_throwing_2.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "holding",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "throwing",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.6137, 5.36031 )

[node name="BeachBuddy" type="Area2D"]
collision_layer = 512
collision_mask = 256
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 0 )
z_index = -1
frames = SubResource( 1 )
animation = "throwing"
speed_scale = 0.5
playing = true

[node name="ThrowTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.48009, 6.89428 )
shape = SubResource( 2 )

[node name="FrisbeeSpawn" type="Node2D" parent="."]
position = Vector2( -13.0815, 7.42462 )
[connection signal="body_entered" from="." to="." method="_on_BeachBuddy_body_entered"]
[connection signal="timeout" from="ThrowTimer" to="." method="_on_ThrowTimer_timeout"]
